--- a/options.html
+++ b/options.html
@@ -1,12 +1,12 @@
+<!DOCTYPE>
 <html>
   <head>
-    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <script type="text/javascript" src="auth.js"></script>
+    <script type="text/javascript" src="search.js"></script>
     <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </head>
   <body>
-    <!--Add a file picker for the user to start the upload process -->
-    <input type="file" id="filePicker" style="display: none" />
+    <h1 id="authorizeStatus" style="display:none">You have already authorized this extension!</h1>
     <input type="button" id="authorizeButton" style="display: none" value="Authorize" />
     <input type="button" id="listButton", value="List" />
   </body>
