--- a/background.html
+++ b/background.html
@@ -1,44 +1,13 @@
 <!DOCTYPE>
 <html>
   <head>
-  	<script type="text/javascript">
-      var CLIENT_ID = '372787255618.apps.googleusercontent.com';
-      var SCOPES = 'https://www.googleapis.com/auth/drive';
-
-      /**
-       * Called when the client library is loaded to start the auth flow.
-       */
-      function handleClientLoad() {
-        window.setTimeout(checkAuth, 1);
-      }
-
-      /**
-       * Check if the current user has authorized the application.
-       */
-      function checkAuth() {
-        gapi.auth.authorize(
-            {'client_id': CLIENT_ID, 'scope': SCOPES, 'immediate': true},
-            handleAuthResult);
-      }
-
-      /**
-       * Called when authorization server replies.
-       *
-       * @param {Object} authResult Authorization result.
-       */
-      function handleAuthResult(authResult) {
-      	alert(authResult);
-        if (authResult && !authResult.error) {
-          // Access token has been successfully retrieved, requests can be sent to the API.
-        } else {
-          // handle auth error
-          gapi.auth.authorize(
-	        {'client_id': CLIENT_ID, 'scope': SCOPES, 'immediate': false},
-            handleAuthResult);
-        }
-      }
-    </script>
+    <script type="text/javascript" src="auth.js"></script>
+    <script type="text/javascript" src="search.js"></script>
     <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </head>
-  <body></body>
+  <body>
+    <h1 id="authorizeStatus" style="display:none">You have already authorized this extension!</h1>
+    <input type="button" id="authorizeButton" style="display: none" value="Authorize" />
+    <input type="button" id="listButton", value="List" />
+  </body>
 </html>
