--- a/options.html
+++ b/options.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <script type="text/javascript" src="auth.js"></script>
+    <script type="text/javascript" src="options.js"></script>
     <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </head>
   <body>
     <h1 id="authorizeStatus" style="display:none">You have already authorized this extension!</h1>
     <input type="button" id="authorizeButton" style="display: none" value="Authorize" />
-    <input type="button" id="listButton", value="List" />
   </body>
 </html>
